[update] pridany strucny navod

--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Tuto stranku som zriadil pre vas, aby uz nebolo to, ze boha kurnik dakto vymazal zo zlozky X subor Y. Dropbox bola sranda, ale bohuzial neda sa tam obmedzit pravomoci na pridavanie, ale hlavne mazanie. Preto som sa rozhodol, i ked aj medzi vas uz nepatrim (nastastie/bohiuzal :D), ale dropbox spravujem ja (pain in the ass), aby ste aspon Vy mohli mat troska gro, a aby to malo aj strukturu a nemizli odtial veci.
+
+Pouzivanie gitu je sice (mozna) pre vacsinu z vas novinkou, ale uistujem vas, ze je to prehladnejsie, ma to dokonca aj historiu, co dropbox mal mizerny na druhej strane, takze ak dakto zmenil nejaky dokument, alebo tak, tak si mozete aj starsie kopie pozriet.
+
+Ukazka pouzivania:
+</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
