--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Vitajte na pseudooficialnom repozitari studijnych materialov.</h3>
 
 <p>Tuto stranku som zriadil pre vas, aby uz nebolo to, ze boha kurnik dakto vymazal zo zlozky X subor Y. Dropbox bola sranda, ale bohuzial neda sa tam obmedzit pravomoci na pridavanie, ale hlavne mazanie. Preto som sa rozhodol, i ked aj medzi vas uz nepatrim (nastastie/bohiuzal :D), ale dropbox spravujem ja (pain in the ass), aby ste aspon Vy mohli mat troska gro, a aby to malo aj strukturu a nemizli odtial veci.
 
