--- a/index.html
+++ b/index.html
@@ -38,25 +38,9 @@
 
 Pouzivanie gitu je sice (mozna) pre vacsinu z vas novinkou, ale uistujem vas, ze je to prehladnejsie, ma to dokonca aj historiu, co dropbox mal mizerny na druhej strane, takze ak dakto zmenil nejaky dokument, alebo tak, tak si mozete aj starsie kopie pozriet.
 
-Ukazka pouzivania:
-</p>
+Stiahnut si mozete cely repozitar bud cez linky vyssie uvedene vo formate tar alebo zip, alebo v repozitari vpravo dole cez tlactiko Clone to desktop.
+If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
