--- a/index.html
+++ b/index.html
@@ -34,12 +34,20 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Vitajte na pseudooficialnom repozitari studijnych materialov.</h3>
 
-<p>Tuto stranku som zriadil pre vas, aby uz nebolo to, ze boha kurnik dakto vymazal zo zlozky X subor Y. Dropbox bola sranda, ale bohuzial neda sa tam obmedzit pravomoci na pridavanie, ale hlavne mazanie. Preto som sa rozhodol, i ked aj medzi vas uz nepatrim (nastastie/bohiuzal :D), ale dropbox spravujem ja (pain in the ass), aby ste aspon Vy mohli mat troska gro, a aby to malo aj strukturu a nemizli odtial veci.
-
-Pouzivanie gitu je sice (mozna) pre vacsinu z vas novinkou, ale uistujem vas, ze je to prehladnejsie, ma to dokonca aj historiu, co dropbox mal mizerny na druhej strane, takze ak dakto zmenil nejaky dokument, alebo tak, tak si mozete aj starsie kopie pozriet.
-
-Stiahnut si mozete cely repozitar bud cez linky vyssie uvedene vo formate tar alebo zip, alebo v repozitari vpravo dole cez tlactiko Clone to desktop.
-If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>
+Tuto stranku som zriadil pre vas, aby uz nebolo to, ze boha kurnik dakto vymazal zo zlozky X 
+subor Y. Dropbox bola sranda, ale bohuzial neda sa tam obmedzit pravomoci na pridavanie, ale 
+hlavne mazanie. Preto som sa rozhodol, i ked aj medzi vas uz nepatrim (nastastie/bohiuzal :D), ale 
+dropbox spravujem ja (pain in the ass), aby ste aspon Vy mohli mat troska gro, a aby to malo 
+aj strukturu a nemizli odtial veci.
+</p>
+<p>
+Pouzivanie gitu je sice (mozna) pre vacsinu z vas novinkou, ale uistujem vas, ze 
+je to prehladnejsie, ma to dokonca aj historiu, co dropbox mal mizerny na druhej 
+strane, takze ak dakto zmenil nejaky dokument, alebo tak, tak si mozete aj starsie 
+kopie pozriet. Stiahnut si mozete cely repozitar bud cez linky vyssie uvedene vo 
+formate tar alebo zip, alebo v repozitari vpravo dole cez tlactiko Clone to desktop.
+</p>
 
 
 <h3>
